feat: Add a Vue example app

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "lint": "scripty",
     "precommit": "scripty",
-    "test": "scripty"
+    "test": "scripty",
+    "local-link": "scripty"
   },
   "scripty": {
     "silent": true
