--- a/examples/react-app/package.json
+++ b/examples/react-app/package.json
@@ -6,7 +6,8 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "local-link": "yarn link yaml-nunjucks-loader"
   },
   "eslintConfig": {
     "extends": "react-app"
